[package]
name = "cloud_terrastodon_azure_devops_rest_client"
version = "0.14.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
reqwest.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
cloud_terrastodon_command.workspace = true
cloud_terrastodon_azure_types.workspace = true

[dev-dependencies]
tokio.workspace=true

