[package]
name = "cloud_terrastodon_azure_devops_types"
description = "Types for modelling Azure DevOps for the Cloud Terrastodon project"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_hcl_types = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true } 
clap = { workspace = true } 
iso8601-duration = { workspace = true }
itertools = { workspace = true }