[package]
name = "cloud_terrastodon_azure_devops_types"
description = "Types for modelling Azure DevOps for the Cloud Terrastodon project"
version = "0.29.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_azure_types = { workspace = true }
cloud_terrastodon_hcl_types = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true } 
clap = { workspace = true } 
iso8601-duration = { workspace = true }
itertools = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
arbitrary = { workspace = true }
unicode_categories = { workspace = true }

[dev-dependencies]
rand.workspace=true

















