[package]
name = "cloud_terrastodon_azure_resource_types"
version = "0.1.0"
edition.workspace = true

[dependencies]
cloud_terrastodon_command = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
prettyplease = { workspace = true }