[package]
name = "cloud_terrastodon_azure_resource_types"
description = "Generated enum for Azure resource types for use in the Cloud Terrastodon project"
version = "0.36.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
cloud_terrastodon_command.workspace = true
facet.workspace = true
arbitrary.workspace = true

[dev-dependencies]
tokio.workspace = true
eyre.workspace = true
facet-json.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
prettyplease.workspace = true
