[package]
name = "cloud_terrastodon_azure_types"
description = "Types for modelling Azure stuff for the Cloud Terrastodon project"
version = "0.31.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_user_input.workspace = true
cloud_terrastodon_command.workspace = true
cloud_terrastodon_azure_resource_types.workspace = true
cloud_terrastodon_hcl_types.workspace = true # todo: we want to invert this such that the hcl crates know about azure types without the azure types worrying about HCL.
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
chrono.workspace = true 
clap.workspace = true 
iso8601-duration.workspace = true
itertools.workspace = true
humantime.workspace = true
compact_str = { workspace = true, features = ["serde"] }
# regex.workspace = true
arbitrary.workspace = true
unicode_categories.workspace = true
ipnetwork.workspace = true
tracing.workspace = true
strum.workspace = true

[dev-dependencies]
rand.workspace=true



















