[package]
name = "cloud_terrastodon_command"
version = "0.24.0" # CT_VERSION
description = "Command running helpers for the Cloud Terrastodon project"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_pathing.workspace = true
cloud_terrastodon_config.workspace = true
cloud_terrastodon_relative_location.workspace = true
tokio.workspace = true 
eyre.workspace = true 
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
async-recursion.workspace = true
tracing.workspace = true
chrono.workspace = true
humantime.workspace = true
bstr.workspace = true
compact_str.workspace=true

[dev-dependencies]
cloud_terrastodon_user_input.workspace = true
ratatui.workspace = true
tracing-subscriber.workspace=true





