[package]
name = "cloud_terrastodon_config"
version = "0.1.0"
edition = "2021"

[dependencies]
cloud_terrastodon_pathing = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ordermap = { workspace = true }
serde_json = { workspace = true }
async-trait.workspace = true
emath = { workspace = true, features = ["serde"] }
