[package]
name = "cloud_terrastodon_config"
description = "Configuration helpers for the Cloud Terrastodon project"
version = "0.18.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cloud_terrastodon_pathing = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ordermap = { workspace = true }
serde_json = { workspace = true }
async-trait.workspace = true
emath = { workspace = true, features = ["serde"] }







