[package]
name = "cloud_terrastodon_credentials"
description = "Helpers for getting Azure PAT and stuff for Cloud Terrastodon"
version = "0.28.0"                                                            # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cloud_terrastodon_azure_types.workspace = true
cloud_terrastodon_command.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
eyre.workspace = true
tracing.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace=true
# facet = "0.27.16"
# facet-json = "0.24.18"
# hex = "0.4.3"



[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Security_Cryptography", "Win32_System_Memory", "Win32_Foundation", "Win32_Security_Credentials"] }






