[package]
name = "cloud_terrastodon_entrypoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_tofu = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_azure_devops = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
cloud_terrastodon_config = { workspace = true }
cloud_terrastodon_zombies = { workspace = true }
cloud_terrastodon_ui_egui = { workspace = true }
cloud_terrastodon_ui_ratatui = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
opener = { workspace = true }
async-recursion = { workspace = true }
tempfile = { workspace = true }
strum = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Console",
    "Win32_Globalization",
] }

[dev-dependencies]
test-log = { workspace = true }
