[package]
name = "cloud_terrastodon_entrypoint"
description = "Main entrypoint for the Cloud Terrastodon CLI"
version = "0.31.0"                                            # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_user_input.workspace = true
cloud_terrastodon_hcl.workspace = true
cloud_terrastodon_azure.workspace = true
cloud_terrastodon_azure_devops.workspace = true
cloud_terrastodon_command.workspace = true
cloud_terrastodon_credentials.workspace = true
cloud_terrastodon_pathing.workspace = true
cloud_terrastodon_config.workspace = true
cloud_terrastodon_zombies.workspace = true
cloud_terrastodon_ui_egui.workspace = true
cloud_terrastodon_ui_ratatui.workspace = true
eyre.workspace = true
color-eyre.workspace = true
chrono.workspace = true
itertools.workspace = true
indexmap.workspace = true
indoc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
indicatif.workspace = true
tracing.workspace = true
clap.workspace = true
humantime.workspace = true
opener.workspace = true
async-recursion.workspace = true
tempfile.workspace = true
strum.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
prettyplease.workspace = true
tracing-subscriber.workspace = true
compact_str = { workspace = true, features = ["serde"] }
jsonpath-rust.workspace = true
jmespath.workspace = true
http.workspace = true
liquid.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Console",
    "Win32_Globalization",
] }

[dev-dependencies]
test-log.workspace = true


