[package]
name = "cloud_terrastodon_hcl"
description = "Helpers for manipulating TerraStorodon HCL files for the Cloud Terrastodon project"
version = "0.28.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_hcl_types = { workspace = true }
cloud_terrastodon_relative_location = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_azure_devops = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
indoc = { workspace = true }
reqwest = { workspace = true }
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
rand.workspace = true
directories-next = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true

















