[package]
name = "cloud_terrastodon_hcl_types"
description = "Helper types for interacting with HCL for the Cloud Terrastodon project"
version = "0.31.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# unidecode.workspace = true
async-trait.workspace = true
cloud_terrastodon_command.workspace = true
cloud_terrastodon_user_input.workspace = true
eyre.workspace = true
hcl-primitives.workspace = true
hcl-rs.workspace = true
indoc.workspace = true
itertools.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true




















