[package]
name = "cloud_terrastodon_pathing"
description = "Well-known paths for the Cloud Terrastodon project"
version = "0.20.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
directories-next = { workspace = true }
async-trait.workspace = true








