[package]
name = "cloud_terrastodon_relative_location"
version = "0.16.0" # CT_VERSION
description = "A helper for converting std::panic::Location to relative paths with displayed"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
eyre.workspace=true



