[package]
name = "cloud_terrastodon_tofu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_tofu_types = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_azure_devops = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
indoc = { workspace = true }
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
rand.workspace = true
directories-next = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
