[package]
name = "cloud_terrastodon_tracing"
version = "0.32.0" # CT_VERSION
description = "Tracing utilities for the Cloud Terrastodon project"
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
egui_tracing = { git = "https://github.com/TeamDman/egui_tracing", branch = "dev" }
eyre = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[features]
default = []
