[package]
name = "cloud_terrastodon_tracing"
version = "0.35.1" # CT_VERSION
description = "Tracing utilities for the Cloud Terrastodon project"
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
chrono.workspace = true
# egui_tracing.workspace = true # TODO(EGUI-TRACING)
eyre.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = []
