[package]
name = "cloud_terrastodon_ui_egui"
version = "0.23.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_hcl = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_azure_devops = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
cloud_terrastodon_config = { workspace = true }
cloud_terrastodon_zombies = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = { version = "0.31.1", features = ["default", "image"] }











