[package]
name = "cloud_terrastodon_ui_egui"
description = "User interface for the Cloud Terrastodon project leveraging egui"
version = "0.32.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_hcl = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_azure_devops = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
cloud_terrastodon_config = { workspace = true }
cloud_terrastodon_zombies = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
eframe = { version = "0.33.0", features = ["persistence"] }
egui_extras = { version = "0.33.0", features = ["default", "image"] }
egui-toast = "0.19.1"
egui_tracing = { git = "https://github.com/TeamDman/egui_tracing", branch = "dev" }
cloud_terrastodon_tracing = { workspace = true }
