[package]
name = "cloud_terrastodon_ui_ratatui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }