[package]
name = "cloud_terrastodon_ui_ratatui"
description = "User interface for the Cloud Terrastodon project leveraging Ratatui"
version = "0.28.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratatui = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
rustc-hash = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_command = { workspace = true }

[dev-dependencies]
color-eyre = { workspace = true }
















