[package]
name = "cloud_terrastodon_ui_ratatui"
description = "User interface for the Cloud Terrastodon project leveraging Ratatui"
version = "0.36.0"                                                                  # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratatui = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
facet = { workspace = true }
facet-reflect.workspace = true
rand = { workspace = true }
rustc-hash = { workspace = true }
nucleo = { workspace = true }
tui-textarea = { workspace = true }
cloud_terrastodon_azure = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_registry = { workspace = true }
linkme = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
color-eyre = { workspace = true }

