[package]
name = "cloud_terrastodon_user_input"
description = "Helper functions for interacting with users in the terminal"
version = "0.24.0"                                                          # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
itertools.workspace = true
indexmap.workspace = true
tokio.workspace = true
ratatui.workspace = true
tui-textarea.workspace = true
nucleo.workspace = true
compact_str.workspace = true
rustc-hash.workspace = true



