[package]
name = "cloud_terrastodon_user_input"
description = "Helper functions for interacting with users in the terminal"
version = "0.30.0"                                                          # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
itertools.workspace = true
indexmap.workspace = true
tokio.workspace = true
ratatui.workspace = true
tui-textarea.workspace = true
nucleo.workspace = true
compact_str.workspace = true
rustc-hash.workspace = true
tracing.workspace = true










