[package]
name = "cloud_terrastodon_zombies"
description = "Helpers for detecting zombie processes for the Cloud Terrastodon project"
version = "0.32.0" # CT_VERSION
readme.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sysinfo = "0.37.2"
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }





















